Converted strutucture to Spring Boot 4